edit or update operations and show single record

--- a/views/show.ejs
+++ b/views/show.ejs
@@ -29,7 +29,7 @@
             <td><%= data.lastname %></td>
             <td><%= data.email %></td>
             <td><%= data.phno %></td>
-            <td><a href="">Edit</a></td>
+            <td><a href="/memberedit/<%= data._id %>">Edit</a></td>
            <td> <a href="/memberdelete/<%= data._id %>"> Delete </a></td>
         </tr>
         <% i++ %>
